--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -61,7 +61,7 @@
       .col-75{float:left;width:75%;margin-top:6px}
       .row:after{content:"";display:table;clear:both}
       table,tr,td{border:none}
-      table{font-family:arial,sans-serif;border-collapse:collapse;width:100%}
+      table{border-collapse:collapse;width:100%}
       td,th{border:1px solid #bbb;text-align:left;padding:15px}
       tr:nth-child(even){background-color:#eee}
 	  .mikrotik-logo {display:none}
