--- a/mikrotik-dns-over-https-doh.html
+++ b/mikrotik-dns-over-https-doh.html
@@ -58,7 +58,7 @@
       .row:after{content:"";display:table;clear:both}
       .list-output-content{height:auto;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
       table,tr,td{border:none}
-      table{font-family:arial,sans-serif;border-collapse:collapse;width:100%}
+      table{border-collapse:collapse;width:100%}
       td,th{border:1px solid #ddd;text-align:left;padding:8px}
 	  .mikrotik-logo {display:none}
       @media screen and (max-width:700px) {
