--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -54,7 +54,7 @@
       label{padding:5px 5px 5px 0;display:inline-block}
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
-      .column{float:left;width:33.3%}
+      .column{float:left;width:50%}
       .row:after{content:"";display:table;clear:both}
       .list-output-content{height:auto;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:10px;margin-top:10px;border:1px solid #ccc;border-radius:5px;white-space:nowrap}
       .class-input{display:flex;}
@@ -173,29 +173,29 @@
 		  <div class="row">
             <div class="column">
               <input type="checkbox" id="mikrotik-winbox" >
-              <label for="mikrotik-winbox">Winbox Scan</label><br>
+              <label for="mikrotik-winbox">Block Winbox Scan</label><br>
               <input type="checkbox" id="mikrotik-discovery" >
-              <label for="mikrotik-discovery">Neighbor Discovery</label><br>
+              <label for="mikrotik-discovery">Block Neighbor Discovery</label><br>
               <input type="checkbox" id="mikrotik-mac-server" >
-              <label for="mikrotik-mac-server">Mac Server</label><br>
+              <label for="mikrotik-mac-server">Block Mac Server</label><br>
               <input type="checkbox" id="mikrotik-traceroute" >
-              <label for="mikrotik-traceroute">Traceroute</label><br>
+              <label for="mikrotik-traceroute">Block Traceroute</label><br>
               <input type="checkbox" id="mikrotik-rommon" >
-              <label for="mikrotik-rommon">RoMON</label><br>
+              <label for="mikrotik-rommon">Block RoMON</label><br>
               <input type="checkbox" id="mikrotik-dns" >
-              <label for="mikrotik-dns">Open DNS</label><br>
+              <label for="mikrotik-dns">Block Open DNS</label><br>
             </div>
             <div class="column">			  
               <input type="checkbox" id="mikrotik-proxy" >
-              <label for="mikrotik-proxy">Open PROXY</label><br>
+              <label for="mikrotik-proxy">Block Open PROXY</label><br>
               <input type="checkbox" id="mikrotik-btest" >
-              <label for="mikrotik-btest">BTest</label><br>		  
+              <label for="mikrotik-btest">Block BTest</label><br>		  
               <input type="checkbox" id="mikrotik-snmp" >
-              <label for="mikrotik-snmp">SNMP</label><br>			
+              <label for="mikrotik-snmp">Block SNMP</label><br>			
               <input type="checkbox" id="mikrotik-thedude" >
-              <label for="mikrotik-thedude">The Dude</label><br>
+              <label for="mikrotik-thedude">Block The Dude</label><br>
               <input type="checkbox" id="mikrotik-ipcloud" >
-              <label for="mikrotik-ipcloud">IP Cloud</label><br>
+              <label for="mikrotik-ipcloud">Block IP Cloud</label><br>
             </div>
           </div>
 		  <div style="border-bottom:1px solid #bbb; margin-top:2px;"></div>
