--- a/mikrotik-pcq-burst-rate-queue-size-generator.html
+++ b/mikrotik-pcq-burst-rate-queue-size-generator.html
@@ -55,7 +55,7 @@
       input[type=submit]:hover{background-color:#45a049}
       .list-output-content{height:auto;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
       table,tr,td{border:none}
-      table{font-family:arial,sans-serif;border-collapse:collapse;width:100%}
+      table{border-collapse:collapse;width:100%}
       td,th{border:1px solid #ddd;text-align:left;padding:7px}
       table{width:100%}
       th{width:50%}
