--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -57,7 +57,7 @@
       .row:after{content:"";display:table;clear:both}
       .list-output-content{height:auto;min-height:300px;background:#f9f9f9;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:0;border:1px solid #bbb;border-radius:5px;white-space:nowrap}
       table,tr,td{border:none}
-      table{font-family:arial,sans-serif;border-collapse:collapse;width:100%}
+      table{border-collapse:collapse;width:100%}
       td,th{border:1px solid #ccc;text-align:left;padding:6px;font-weight:400}
       th{font-weight:700;background:#ddd;text-align:center}
       .myImage{padding:0;margin:0}
