--- a/mikrotik-hotspot-wizard.html
+++ b/mikrotik-hotspot-wizard.html
@@ -47,7 +47,7 @@
       .step{height:20px;width:20px;margin:0 5px;background-color:#f60;border:none;border-radius:50%;display:inline-block;opacity:.5}
       .step.active{opacity:1}
       .step.finish{background-color:#f60}
-      .footer{font-size:13px;padding-top:15px;text-align:center;clear:both;width:auto;color:#ddd}
+      .footer{font-size:13px;padding-top:15px;padding-bottom:15pxtext-align:center;clear:both;width:auto;color:#ddd}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
