--- a/static-routing-games.html
+++ b/static-routing-games.html
@@ -90,7 +90,7 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
-	  	  
+	  .list-game{height:200px;}
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       .avatar{display:none}
       }
