--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -163,9 +163,8 @@
         <div class="content">
           <div style="margin-left:2px; margin-top:5px; font-weight:bold">Copy-Paste the Script to your Terminal!</div>
           <div class="list-output-content">
-            <table id="showScript" style="padding:5px; white-space: nowrap;">
-              <tr>
-                <td> <span style="color:#ff6600;">
+            <div id="showScript" style="padding:5px; white-space: nowrap;">
+                 <span style="color:#ff6600;">
                   ###############################################################<br>
                   # Mikrotik Notification Expired For Hotspot, PPPoE and Static-IP Generator<br>
                   # Date/Time: <span id="tanggalwaktu"></span><br>
@@ -204,14 +203,12 @@
                   \n/ip firewall address-list remove [find comment=\"hs-\$username\"];" shared-users=100<br>
                   <b>/ip hotspot walled-garden ip</b><br>
                   add action=accept disabled=no !dst-address !dst-address-list dst-port=<span style="color:#ff6600; font-weight:bold" id="result-wallet-garden-port">8082</span> protocol=tcp !src-address !src-address-list comment="EXPIRED By BNT"<br>
-                </td>
-              </tr>
-            </table>
+            </div>
           </div>
           <br>
           <button style="margin-right:5px;" type="button" onclick="myFunction()">Generate</button>
           <button id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
-          <span class="d-link"><a class="download" href="#" download="error.html">Save error.html</a></span><br>
+          <span class="d-link"><a class="download" href="#" download="error.html">error.html</a></span><br>
           <div class="list-output-content2">
             <div style="text-align:center">
               <span id="msg-title" style="color:#fff; font-weight:bold; font-size:70px;">EXPIRED!</span><br>
