--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           <div class="gcse-searchresults"></div>
         </div>
         <h1>MikroTik Router<i>OS</i> Script and Tools</h1>
-        <h2>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h2>
+        <h2>MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script DataBase</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
@@ -261,7 +261,7 @@
             <p><a target="_blank"  href="https://router-os.github.io/">MikroTik RouterOS Search Script</a></p>
           </div>
         </div>
-        <h2>// MIKROTIK ROUTEROS SCRIPT GENERATOR</h2>
+        <h2>MIKROTIK ROUTEROS SCRIPT GENERATOR</h2>
         <span style="font-size:16px;font-weight:600;">☰ ROUTE <span style="color:#ff6600">//</span> MANGLE <span style="color:#ff6600">//</span> NAT</span>
         <div class="row">
           <div class="column">
@@ -339,7 +339,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
           </div>
         </div>
-        <h2>// MIKROTIK TOOLS AND LOGO DESIGNS</h2>
+        <h2>MIKROTIK TOOLS AND LOGO DESIGNS</h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank" rel="nofollow"  href="https://mt.lv/winbox64">Winbox-64 (64bit)</a></p>
@@ -356,7 +356,7 @@
             <p><a target="_blank" rel="nofollow"  href="https://designs.mikrotik.com/">MikroTik Logo, Walpaper, T-Shirt</a></p>
           </div>
         </div>
-        <h2>// MIKROTIK MOBILE TOOLS</h2>
+        <h2>MIKROTIK MOBILE TOOLS</h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank" rel="nofollow"  href="https://apps.apple.com/id/app/mikrotik/id1323064830?l=id">MikroTik Winbox iPhone</a></p>
@@ -367,7 +367,7 @@
             <p><a target="_blank" rel="nofollow"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.bt5">MikroTik Beacon Manager</a></p>
           </div>
         </div>
-        <h2>// MIKROTIK ROUTEROS SOFTWARE DOWNLOAD</h2>
+        <h2>MIKROTIK ROUTEROS SOFTWARE DOWNLOAD</h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/download">Mikrotik RouterOS Download Official</a></p>
@@ -376,7 +376,7 @@
             <p><a target="_blank" rel="nofollow"  href="http://www.routeros.co.id">Routeros.co.id (Indonesia Server)</a></p>
           </div>
         </div>
-        <h2>// MIKROTIK WIRELESS TOOLS</h2>
+        <h2>MIKROTIK WIRELESS TOOLS</h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/test_tower.php">Antenna Height Calculation</a></p>
@@ -388,7 +388,7 @@
             <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/client/distributorLockpack">Lockpack creator (need login)</a></p>
           </div>
         </div>
-        <h2>// MIKROTIK TOOLS CALCULATOR AND MONITOR</h2>
+        <h2>MIKROTIK TOOLS CALCULATOR AND MONITOR</h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank" rel="nofollow"  href="https://www.mikrotik.id/artikel_lihat.php?id=215">Traffic Monitor with Cacti linux</a></p>
@@ -404,7 +404,7 @@
             <p><a target="_blank" rel="nofollow"  href="https://www.mkesolutions.net/pdf/routeros-cheat-sheet-v1.1.pdf">PDF RouterOS Console Cheat Sheet</a></p>
           </div>
         </div>
-        <h2>// MIKROTIK BILLING OR RADIUS HOTSPOT PPPOE </h2>
+        <h2>MIKROTIK BILLING OR RADIUS HOTSPOT PPPOE </h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank" rel="nofollow"  href="https://freeradius.org">FREERADIUS</a></p>
@@ -424,7 +424,7 @@
             <p><a target="_blank" rel="nofollow"  href="https://www.daloradius.com/">Daloradius</a></p>
           </div>
         </div>
-        <h2>// OTHER MIKROTIK BATCH TOOLS</h2>
+        <h2>OTHER MIKROTIK BATCH TOOLS</h2>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://github.com/buananetpbun/FREE-DNS-PING-TEST-DOS-BATCH">Batch: DNS Ping Test</a></p>
