--- a/login/index.html
+++ b/login/index.html
@@ -46,11 +46,11 @@
           <button  onclick="CallModalChangePasswordShow()">Set Password</button>
           <button  id="delete-user" onclick="DeleteMember()">Delete Account</button>
           <button  id="signout">Logout</button>
-          <div style="margin-top:30px; padding-top:10px;width:100%;color:#888; border-top:1px solid #555;font-weight:normal;font-size:12px">
+          <div style="margin-top:30px; padding-top:10px;width:100%;color:#888; border-top:1px solid #555;font-weight:normal;font-size:13px">
             © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
           </div>
           <div style="margin-top:1px; color:#666; font-size:11px;font-weight:normal">
-            Project by Agus Ramadhani - Pangkalan Bun, Indonesia 74112</a>
+            This project by Agus Ramadhani - PangkalanBun, Kal-teng Indonesia 74112</a>
           </div>
         </div>
       </div>
