--- a/mikrotik-hotspot-wizard.html
+++ b/mikrotik-hotspot-wizard.html
@@ -201,6 +201,9 @@
         <div style="margin-top:0px; text-align:center">
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         </div>
+        <div style="margin-top:1px; color:#888; font-size:11px">
+          This project by Agus Ramadhani - PangkalanBun, Kalteng Indonesia 74112</a>
+        </div>	 		
       </div>
     </div>
     <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">
