--- a/port-knocking-icmp.html
+++ b/port-knocking-icmp.html
@@ -92,7 +92,6 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
-      
       .column{float:left;width:100%}
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       .avatar{display:none}
@@ -214,10 +213,13 @@
         </div>
       </div>
       <div class="footer">
-                              <div style="font-size:13px;margin-bottom:20px; color:#bbb; justify-content:center"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #bbb; border-right:6px solid #bbb; color:#bbb;margin-right:5px ">DISCLAIMER</span> We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
-            </div> 
+        <div style="font-size:13px;margin-bottom:20px; color:#bbb; justify-content:center"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #bbb; border-right:6px solid #bbb; color:#bbb;margin-right:5px ">DISCLAIMER</span> We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
+        </div>
         <div style="margin-top:15px;">
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
+        </div>
+        <div style="margin-top:1px; color:#888; font-size:11px">
+          This project by Agus Ramadhani - PangkalanBun, Kalteng Indonesia 74112</a>
         </div>
       </div>
     </div>
