--- a/remote-ip-public-static.html
+++ b/remote-ip-public-static.html
@@ -175,7 +175,10 @@
       </div>
       <div class="footer">
         © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
-      </div>
+        <div style="margin-top:1px; color:#888; font-size:11px">
+          This project by Agus Ramadhani - PangkalanBun, Kalteng Indonesia 74112</a>
+        </div>	
+      </div>  
     </div>
     <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">
       <div id="center-screen" class="center-screen">Great! One Step Again <br>For Activate Your Member<br><button id="verify">VERIFY YOUR E-MAIL NOW</button></div>
