--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -42,7 +42,7 @@
       .main-wrap{background-color:#f60}
       .content{width:100%;padding:20px;border-top:1px solid #bbb;background:#ddd;border-radius:0 0 5px 5px}
       .sidebar{width:100%;padding:20px;background-color:#f9f9f9;border-right:1px solid #bbb;border-radius:5px;overflow:auto}
-      .footer{font-size:13px;padding-top:15px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
+      .footer{font-size:13px;padding-top:15px;padding-bottom:15px;text-align:left;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#777;font-size:2em;font-weight:700;margin-bottom:10px;margin-top:0;text-align:center}
       a:link{color:#f60}
