--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -193,7 +193,7 @@
         </div>
       </div>
       <div class="footer">
-        <div style="margin-top:0px; text-align:center">
+        <div style="margin-top:0px; text-align:left">
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         </div>
         <div style="margin-top:1px; color:#888; font-size:11px">
