--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -56,7 +56,7 @@
       label{padding:5px 5px 5px 0;display:inline-block; font-weight:600}
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right;border-radius:5px}
       input[type=submit]:hover{background-color:#45a049}
-      .view-template{height:605px;width:428px;padding:4px;margin-top:8px;margin-bottom:8px;border-radius:4px;background:#fff}
+      .view-template{height:605px;width:428px;padding:4px;margin:0 auto; margin-top:8px;margin-bottom:8px;border-radius:4px;background:#fff}
       .qrcode{padding-top:185px;padding-left:80px;position:absolute}
       .text-ssid{padding-top:28px;padding-left:90px;position:absolute;font-size:17pt;font-weight:700;color:#E12D00;position:absolute}
       .myImage{padding:0;margin:0}
