--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -42,7 +42,7 @@
       .main-wrap{display:flex}
       .content{flex:1;float:right;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-left:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
       .sidebar{float:left;width:250px;background-color:#ddd;border:0 solid #bbb;height:auto;border-radius:5px 0 0 5px;padding:15px}
-      .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
+      .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:left;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
       a:link{color:#f60}
