--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -41,7 +41,7 @@
       .content{float:right;width:50%;height:475px;padding:10px;padding-left:5px;padding-right:15px;padding-top:20px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
       .sidebar{float:left;width:50%;height:auto;border-right:1px solid #aaa;padding-right:15px}
       .sidebar2{float:left;width:50%;height:auto;padding-left:15px}
-      .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
+      .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:left;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
       a:link{color:#f60}
