--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -140,7 +140,7 @@
       margin-top:20px;
       margin-bottom:20px;  
       width:auto;
-      text-align:center;
+      text-align:left;
       font-size:14px;
       clear: both
       }
