--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -40,7 +40,7 @@
       .content{width:100%;height:480px;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd}
       .sidebar{width:100%;height:auto;padding:15px;background-color:#ccc;border:2px solid #ccc;border-radius:5px;margin-top:5px}
       .sidebar img{max-width:100%;height:auto;display:block;margin-left:auto;margin-right:auto}
-      .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
+      .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:left;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
       a:link{color:#f60}
