--- a/mikrotik-dns-over-https-doh.html
+++ b/mikrotik-dns-over-https-doh.html
@@ -39,7 +39,7 @@
       .main-wrap{background-color:#f60}
       .content{float:left;width:600px;height:480px;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd}
       .sidebar{float:left;width:100%;height:auto;padding:15px;background-color:#ddd;border:1px solid #bbb;border-radius:5px;margin-top:5px}
-      .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
+      .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:left;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
       a:link{color:#f60}
