--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -237,7 +237,7 @@
       </div>
 	  </div>
       <div class="footer">
-        <div style=" text-align:center">
+        <div style=" text-align:left">
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         </div>
         <div style="margin-top:1px; color:#888; font-size:11px">
