--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -157,7 +157,7 @@
 	  <div class="main-wrap">
       <div class="sidebar">
         <div style="float:left; width:100%;">
-          <label><b>WAN-1 Down Speed</b></label><br>
+          <label><b>WAN-1 Speed</b></label><br>
           <select id="wan-list1">
             <option value="10">10 Mbps</option>
             <option value="20">20 Mbps</option>
@@ -169,7 +169,7 @@
         </div>
         <br>
         <div style="float:left; width:100%;margin-bottom:15px">
-          <label><b>WAN-2 Down Speed</b></label><br>
+          <label><b>WAN-2 Speed</b></label><br>
           <select id="wan-list2">
             <option value="10">10 Mbps</option>
             <option value="20">20 Mbps</option>
