--- a/mirkotik-indonesia-timezone.html
+++ b/mirkotik-indonesia-timezone.html
@@ -214,7 +214,7 @@
       <div class="footer">
         © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         <div style="margin-top:1px; color:#888; font-size:11px">
-          This project by Agus Ramadhani - PangkalanBun, Kalteng Indonesia 74112</a>
+          This project by Agus Ramadhani - PangkalanBun, Kalteng - Indonesia</a>
         </div>			
       </div> 	  
     </div>
