--- a/ecmp.html
+++ b/ecmp.html
@@ -323,7 +323,7 @@
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         </div>
         <div style="margin-top:1px; color:#888; font-size:11px">
-          This project by Agus Ramadhani - PangkalanBun, Kalteng Indonesia 74112</a>
+          This project by Agus Ramadhani - PangkalanBun, Kalteng - Indonesia</a>
         </div>	 		
       </div>
     </div>
