--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -258,8 +258,8 @@
                   <td style="background-color: #ddd;font-weight:bold">DOWNLOAD</td>
                 </tr>
                 <th colspan="2" style="background-color: #eee; font-weight:normal">Limit At</th>
-                <td id="result-up-limit-at" style='font-weight:bold;color: #F93106' >256K</td>
-                <td id="result-down-limit-at" style='font-weight:bold;color: #F93106'>500K</td>
+                <td id="result-up-limit-at" style='font-weight:bold;color: #A01803' >256K</td>
+                <td id="result-down-limit-at" style='font-weight:bold;color: #A01803'>500K</td>
                 </tr> 
                 <th colspan="2" style="background-color: #eee; font-weight:normal">Priority</th>
                 <td style='font-weight:bold;color: DarkCyan'>8</td>
@@ -276,7 +276,7 @@
               </thead>
               <tr id="result" style="font-size:14px;font-weight:700;">
                 <td>
-                  <div style="text-align:center"><span id="rate-up-max-limit" style='color: DarkGreen'>512K</span>/<span id="rate-down-max-limit" style='color: DarkGreen'>1M</span> <span id="rate-up-burst-limit" style='color: #01A3DF'>1M</span>/<span id="rate-down-burst-limit" style='color: #01A3DF'>2M</span> <span id="rate-up-burst-threshold" style='color: #191970'>384K</span>/<span id="rate-down-burst-threshold" style='color: #191970'>750K</span> <span id="rate-up-burst-time" style='color: DarkViolet'>16</span>/<span id="rate-down-burst-time" style='color: DarkViolet'>16</span> <span style="color:DarkCyan">8</span> <span id="rate-up-limit-at" style='color: #F93106' >256K</span>/<span id="rate-down-limit-at" style='color: #F93106'>500K</span></div>
+                  <div style="text-align:center"><span id="rate-up-max-limit" style='color: DarkGreen'>512K</span>/<span id="rate-down-max-limit" style='color: DarkGreen'>1M</span> <span id="rate-up-burst-limit" style='color: #01A3DF'>1M</span>/<span id="rate-down-burst-limit" style='color: #01A3DF'>2M</span> <span id="rate-up-burst-threshold" style='color: #191970'>384K</span>/<span id="rate-down-burst-threshold" style='color: #191970'>750K</span> <span id="rate-up-burst-time" style='color: DarkViolet'>16</span>/<span id="rate-down-burst-time" style='color: DarkViolet'>16</span> <span style="color:DarkCyan">8</span> <span id="rate-up-limit-at" style='color: #A01803' >256K</span>/<span id="rate-down-limit-at" style='color: #A01803'>500K</span></div>
                 </td>
               </tr>
             </table>
