--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -222,7 +222,7 @@
           </div>
         </div>
         <div class="content">
-          <div style="margin-left:2px;font-size:14px; font-weight:700;text-align:center">BURST RESULT FOR <span style="color:#ff6600">SIMPLE QUEUE</span> OR <span style="color:#ff6600">QUEUE TREE</span></div>
+          <div style="margin-left:2px;font-size:14px; font-weight:700;text-align:left">BURST RESULT FOR <span style="color:#ff6600">SIMPLE QUEUE</span> OR <span style="color:#ff6600">QUEUE TREE</span></div>
           <div class="list-output-content" style="margin-bottom:10px">
             <table style="font-weight:normal">
               <thead>
@@ -271,7 +271,7 @@
             <table id="mytable" style="font-weight:normal">
               <thead>
                 <tr style="background-color: #ddd;" >
-                  <td style="background-color: #ddd; text-align:center"><b>RATE LIMIT FOR <span style="color:#ff6600">HOTSPOT</span> OR <span style="color:#ff6600">PPPOE</span></b></td>
+                  <td style="background-color: #ddd; text-align:left"><b>RATE LIMIT FOR <span style="color:#ff6600">HOTSPOT</span> OR <span style="color:#ff6600">PPPOE</span></b></td>
                 </tr>
               </thead>
               <tr id="result" style="font-size:14px;font-weight:700;">
