--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -283,7 +283,7 @@
       <div class="footer">
         © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         <div style="margin-top:1px; color:#888; font-size:11px">
-          Project and design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">www.o-om.com</a> PangkalanBun Kalteng, INDONESIA 74112</a>
+          Project and design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">www.o-om.com</a> PangkalanBun Kalteng 74112, INDONESIA</a>
         </div>			
       </div>  
     </div>
