--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
           </div>
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Project by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
         <div style="margin-top:0px; color:#888; font-size:11px">
-          Project and design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">www.o-om.com</a> PangkalanBun Kalteng, INDONESIA 74112</a>
+          Project and design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">www.o-om.com</a> PangkalanBun Kalteng 74112, INDONESIA</a>
         </div>	 		  
         </div>
       </div>
