--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -258,7 +258,7 @@
         <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;text-align:left">
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         <div style="margin-top:1px; color:#888; font-size:11px">
-          Project and design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">www.o-om.com</a> PangkalanBun Kalteng, INDONESIA 74112</a>
+          Project and design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">www.o-om.com</a> PangkalanBun Kalteng 74112, INDONESIA</a>
         </div>	 		  
         </div>			
       </div>
