--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       .column a{font-weight:600}
       .row:after{content:"";display:table;clear:both}
       .member-only{cursor:help;margin-left:5px;height:13px;width:12px}
-      .footer{margin-top:20px;text-align:center;font-size:13px}
+      .footer{margin-top:20px;text-align:left;font-size:13px}
       .show-homepage-menu{margin-bottom:3px}
       .avatar img{margin-bottom:-13px;margin-left:5px;margin-right:5px;width:40px;height:40px;background-size:cover;background-repeat:no-repeat;background-position:center center;-webkit-border-radius:99em;-moz-border-radius:99em;border-radius:99em;border:2px solid #292929}
       .terminal{margin-bottom:15px;width:100%}
@@ -492,13 +492,13 @@
         </div>
         <div class="footer">
           <div class="disclaimer">
-            <div style="font-size:13px;margin-bottom:20px; color:#666; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
+            <div style="font-size:13px;margin-bottom:20px; color:#292929; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
               We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik Company, all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
             </div>
           </div>
-          © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Project by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
+          © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         <div style="margin-top:0px; color:#777; font-size:11px">
-          Project and design by Agus Ramadhani <a style="color:#777; text-decoration:underline; font-weight:normal" target="_blank" href="https://www.o-om.com/">www.o-om.com</a> PangkalanBun Kalteng 74112, INDONESIA</a>
+          Project and design by Agus Ramadhani <a style="text-decoration:underline; font-weight:normal" target="_blank" href="https://www.o-om.com/">www.o-om.com</a> PangkalanBun Kalteng 74112, INDONESIA</a>
         </div>	 		  
         </div>
       </div>
